Backend: Implemented Google authentication

--- a/public/index.html
+++ b/public/index.html
@@ -4,15 +4,18 @@
 		<title>Portale Richieste Assemblee - I.I.S.S. E. Fermi</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" href="/style.css">
+		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
 		<nav>
 			<h1>Portale Richiesta Assemblee</h1>
 			<a target="_blank" href="//fermilecce.edu.it"><img alt="logo" class="logo small" width=100 src="logo-small.png"><img alt="logo" class="logo large" width=200 src="logo.png"></a>
 		</nav>
+
+		
+
 		<main>
-			<form id="form">
+			<div id="form">
 				<fieldset>
 					<legend>Quando</legend>
 					<div>
@@ -53,14 +56,14 @@
 				<br>
 				<br>
 				</fieldset>
-				<input type="submit" value="Richiedi assemblea"/>
-			</form>
+				<button id="submit">Richiedi assemblea</button>
+			</div>
 		</main>
 		<footer>
 			<label>fatto da <a target="_blank" href="//heiz.cc">Emanuele Lillo</a>
 				per <a target="_blank" href="//fermilecce.edu.it">IISS Enrico Fermi</a></label>
 		</footer>
-		<script src="/main.js"></script>
+		<script src="main.js"></script>
 	</body>
 </html>
 
