Frontend: added login state text w/ disconnect button

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,11 @@
 			<h1>Portale Richiesta Assemblee</h1>
 			<a target="_blank" href="//fermilecce.edu.it"><img alt="logo" class="logo small" width=100 src="logo-small.png"><img alt="logo" class="logo large" width=200 src="logo.png"></a>
 		</nav>
-
+		
+		<div id="login-state">
+			<p>Hai effettuato l'accesso come: <span id="nome-utente">NOME COGNOME</span>&nbsp;&nbsp;|&nbsp;&nbsp;</p>
+			<a href="">Esci</a>
+		</div>
 		
 
 		<main>
