Backend: Minor refactor

--- a/public/index.html
+++ b/public/index.html
@@ -64,7 +64,7 @@
 			</div>
 		</main>
 		<footer>
-			<label>fatto da <a target="_blank" href="//heiz.cc">Emanuele Lillo</a>
+			<label>fatto da <a target="_blank" href="//heiz.cc">Emanuele Lillo</a> e <a href="https://riccardoconte.lol" target="_blank">Riccardo Conte</a>
 				per <a target="_blank" href="//fermilecce.edu.it">IISS Enrico Fermi</a></label>
 		</footer>
 		<script src="main.js"></script>
