Backend: Added new GET path

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 		</nav>
 		
 		<div id="login-state">
-			<p>Hai effettuato l'accesso come: <span id="nome-utente">NOME COGNOME</span>&nbsp;&nbsp;|&nbsp;&nbsp;</p>
+			<p>Hai effettuato l'accesso come: <span id="email-utente">EMAIL@EMAIL.EMAIL</span>&nbsp;&nbsp;|&nbsp;&nbsp;</p>
 			<a href="">Esci</a>
 		</div>
 		
