Backend: Broken code

--- a/public/index.html
+++ b/public/index.html
@@ -12,11 +12,10 @@
 			<a target="_blank" href="//fermilecce.edu.it"><img alt="logo" class="logo small" width=100 src="logo-small.png"><img alt="logo" class="logo large" width=200 src="logo.png"></a>
 		</nav>
 		
-		<div id="login-state">
-			<p>Hai effettuato l'accesso come: <span id="email-utente">EMAIL@EMAIL.EMAIL</span>&nbsp;&nbsp;|&nbsp;&nbsp;</p>
-			<a href="">Esci</a>
-		</div>
-		
+		<section id="welcome-text">
+			<p>Benvenuto, <b><span id="account-name">Nomeeeeee</span></b></p>
+			<a href="/">Esci</a>
+		</section>
 
 		<main>
 			<div id="form">
