Serve dashboard only to authenticated users

--- a/public/index.html
+++ b/public/index.html
@@ -13,8 +13,7 @@
 		</nav>
 		
 		<section id="welcome-text">
-			<p>Benvenuto, <b><span id="account-name">Nomeeeeee</span></b></p>
-			<a href="/">Esci</a>
+			<p>Benvenuto, <b><span id="account-name">{nome}</span></b></p>
 		</section>
 
 		<main>
