Backend: Fixed logout endpoint

--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
 		
 		<section id="welcome-text">
 			<p>Benvenuto, <b><span id="account-name">{nome}</span></b></p>
+			<a href="/logout">Esci</a>
 		</section>
 
 		<main>
