Send teachers and topics to server on form submit

--- a/public/index.html
+++ b/public/index.html
@@ -23,13 +23,13 @@
 					<legend>Quando</legend>
 					<div>
 						<label for="day">Giorno:</label>
-						<input required type="date" min="today" name="day">
+						<input required type="date" min="today" name="day" id="day">
 						<br>
 						<a href="#" id="different-day">» Le due ore non si svolgono nello stesso giorno?</a>
 					</div>
 					<div id="second-day">
 						<label for="day">Secondo giorno:</label>
-						<input type="date" min="today" name="second-day">
+						<input type="date" min="today" name="second-day" id="second-day">
 						<br>
 						<a href="#" id="same-day">» No, le ore si svolgeranno nello stesso giorno</a>
 					</div>
