--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
 		</section>
 
 		<main>
+			<div id="errorMessage">Messaggio di errore</div>
 			<div id="form">
 				<fieldset>
 					<legend>Quando</legend>
