Backend: add server-side validation and error reporting

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
 		</section>
 
 		<main>
-			<div id="errorMessage">Messaggio di errore</div>
+			<div id="errorMessage" style="display: none">Messaggio di errore</div>
 			<div id="form">
 				<fieldset>
 					<legend>Quando</legend>
